--- a/Todo App/Base.lproj/Main.storyboard
+++ b/Todo App/Base.lproj/Main.storyboard
@@ -32,7 +32,14 @@
                             <outlet property="delegate" destination="vam-82-VxO" id="eWd-J6-dEz"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Todo List" id="LAt-pC-4lW"/>
+                    <navigationItem key="navigationItem" title="Todo List" id="LAt-pC-4lW">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="qBO-dX-KMe">
+                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <connections>
+                                <action selector="addButtonPressed:" destination="vam-82-VxO" id="Q3X-7h-VCJ"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="0fV-Ov-bA1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
